--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,3 +44,9 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C $BUILD_TYPE
+      
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: Build Release
+        path: ${{runner.workspace}}/build/Release
